
Package: R.utils
================

Version: 1.29.0 [2014-01-06]
o Added file.info2() for retrieving file information such that symbolic
  file links are also acknowledged on Windows.
o Added Sys.readlink2() for reading symbolic file links also on Windows.


Version: 1.28.6 [2014-01-06]
o Added argument 'skip' (in addition to existing 'overwrite') to fileCopy()
  to allow for better control on how to handle existing destination files.
  Now the method also passes (known) arguments '...' to base::file.copy()
  making it possible to copy with or without file permissions etc.
  Thanks Taku Tokuyasu (UCSF) for reporting on this.


Version: 1.28.5 [2013-12-15]
o Now argument 'asGString' for Arguments$getCharacters() defaults to
  getOption("Arguments$getCharacters/args/asGString", TRUE).  This makes
  it possible to disable this feature, even when it is not possible to
  directly pass that argument.  This will also make it possible to
  set the default to FALSE in the future (instead of TRUE as today).
o Added argument 'inherits' to evaluate() for GString.  Default
  is TRUE for backward compatibility.


Version: 1.28.4 [2013-11-20]
o Minor updates to NAMESPACE file.


Version: 1.28.3 [2013-11-15]
o Added method c() for GenericSummary.


Version: 1.28.2 [2013-11-15]
o CLEANUP: Arguments$getNumerics(NA, range=c(0,1)) no longer gives
  warnings on "no non-missing arguments to min()" etc.


Version: 1.28.1 [2013-10-30]
o BUG FIX: System$getMappedDrivesOnWindows() failed to return the
  proper path for 'net use' mounted drives, iff the path contained
  spaces.


Version: 1.28.0 [2013-10-20]
o CLEANUP: Removed a few non-used internal objects.
o Forgot to declare enterf() for Verbose as an S3 method.


Version: 1.27.6 [2013-10-13]
o CLEANUP: Some methods had to attach 'R.utils' in the past in order
  to work properly.  These are no longer attaching 'R.utils':
  copyDirectory(), createLink(), createWindowsShortcut(),  downloadFile(),